src/components/Form/styles/AuthForm.scss
.form {
  display: flex;
  flex-direction: column;
  grid-gap: 18px;
  
  &-label {
    color: #1E1F20;
    font-size: 12px;
    font-weight: 700;
    letter-spacing: 1px;
    text-transform: uppercase;
  }

  &-input-wrapper {
    position: relative;
    margin-top: 10px;
  }
  
  &-input {
    width: 100%;
    padding: 14px;
    padding-right: 40px;
    border: 2px solid rgba(143, 146, 161, 0.2);
    border-radius: 4px;
  }

  &-input-icon {
    position: absolute;
    top: 50%;
    right: 14px;
    transform: translateY(-50%);
  }

  &-button {
    height: 58px;
    color: #ffffff;
    font-weight: 700;
    background-color: #0659fd;
    border-radius: 12px;
    border: 0;
  }

  &-text {
    margin-top: 18px;
    color: #8F92A1;
    text-align: center;
  }
}

